# AutoCommitPush

./: .eslintrc.cjs  .gitignore  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git_ops.rs  github_api.rs  lib.rs  main.rs  secure_storage.rs  watcher.rs
src-tauri/src/commands/: auth.rs  fs_ops.rs  git.rs  github.rs  mod.rs  setup.rs  terminal.rs
src-tauri/templates/: gitignore_electron.txt  gitignore_generic.txt  gitignore_node.txt  gitignore_python.txt  gitignore_react.txt
src/components/: BranchManagerDialog.tsx  ChangesDiffPanel.tsx  CreateRepoDialog.tsx  DockerPushDialog.tsx  FolderPicker.tsx  GitignoreEditor.tsx  Layout.tsx  PushConfirmDialog.tsx  ReadmeEditor.tsx  RemoveProjectDialog.tsx  Sidebar.tsx  TerminalDialog.tsx  VercelDeployDialog.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  confirm-dialog.tsx  input.tsx  progress.tsx  toast.tsx
src/hooks/: useRepoWatcher.ts
src/lib/: commit-message.ts  docker.ts  platform.ts  tauri-commands.ts  tauriStorage.ts  utils.ts  vercel.ts
src/pages/: DashboardPage.tsx  LoginPage.tsx  LogsPage.tsx  ProjectsPage.tsx  SettingsPage.tsx  SetupCheckPage.tsx  SetupPage.tsx
src/store/: authStore.ts  logStore.ts  projectStore.ts  settingsStore.ts  vercelStore.ts
src/types/: index.ts
